Added css, played a bit and needed to re-git add css and html?

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <HTML>
   <HEAD>
-    <TITLE>Testpage</TITLE>
+    <TITLE>www.SpaceDucK.se</TITLE>
+    <link rel="stylesheet" type="text/css" href="spaceduck.css">
   </HEAD>
   <BODY>
-    <P>
-      Hello world!
-    </P>
+    <H1>
+      In develpoment
+    </H1>
   </BODY>
 </HTML>
