--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <link rel="stylesheet" type="text/css" href="spaceduck.css">
   </HEAD>
   <BODY>
+    <div class="header">
+      <H1 text-size="Bigger">
+	www.SpaceDucK.se
+      </H1>
+      </div>
     <H1>
       In develpoment
     </H1>
