Color updeates and added logo

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   </HEAD>
   <BODY>
     <div class="header">
-      <H1 text-size="Bigger">
+      <img src="Images/DucKLogoseethrough.png" width=80 height=80 align=left>
+      <H1>
 	www.SpaceDucK.se
       </H1>
       </div>
