Solid fixed header

--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <HTML>
   <HEAD>
+    <script src="spaceduck.js"> </script>
     <TITLE>www.SpaceDucK.se</TITLE>
     <link rel="stylesheet" type="text/css" href="spaceduck.css">
   </HEAD>
-  <BODY>
+  <BODY onload="pageLoad()">
     <div class="header">
       <img src="Images/DucKLogoseethrough.png" width=80 height=80 align=left>
       <H1>
 	www.SpaceDucK.se
       </H1>
-      </div>
+    </div>
+    <div id="headerFill" margin-top="30px">
+    </div>
     <H1>
       In develpoment
     </H1>
