partial commit: menu

--- a/index.html
+++ b/index.html
@@ -10,6 +10,27 @@
       <H1>
 	www.SpaceDucK.se
       </H1>
+      <div class="menu">
+	<table>
+	  <tr>
+	    <td>
+	      Teaching
+	    </td>
+	    <td>
+	      Twitch
+	    </td>
+	    <td>
+	      YouTube
+	    </td>
+	    <td>
+	      Cars
+	    </td>
+	    <td>
+	      Gaming
+	    </td>
+	  </tr>
+	</table>
+      </div>
     </div>
     <div id="headerFill" margin-top="30px">
     </div>
