Menu button images

--- a/index.html
+++ b/index.html
@@ -11,25 +11,12 @@
 	www.SpaceDucK.se
       </H1>
       <div class="menu">
-	<table>
-	  <tr>
-	    <td>
-	      Teaching
-	    </td>
-	    <td>
-	      Twitch
-	    </td>
-	    <td>
-	      YouTube
-	    </td>
-	    <td>
-	      Cars
-	    </td>
-	    <td>
-	      Gaming
-	    </td>
-	  </tr>
-	</table>
+	  <img src="images/buttonT.png"></img>
+	  <img src="images/buttonTw.png"></img>
+	  <img src="images/buttonY.png"></img>
+	  <img src="images/buttonC.png"></img>
+	  <img src="images/buttonG.png"></img>
+	  <img src="images/buttonS.png"></img>
       </div>
     </div>
     <div id="headerFill" margin-top="30px">
