--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 	www.SpaceDucK.se
       </H1>
       <div class="menu">
-	  <img src="images/buttonT.png"></img>
-	  <img src="images/buttonTw.png"></img>
-	  <img src="images/buttonY.png"></img>
-	  <img src="images/buttonC.png"></img>
-	  <img src="images/buttonG.png"></img>
-	  <img src="images/buttonS.png"></img>
+	  <img src="images/buttonT.png" />
+	  <img src="images/buttonTw.png" />
+	  <img src="images/buttonY.png" />
+	  <img src="images/buttonC.png" />
+	  <img src="images/buttonG.png" />
+	  <img src="images/buttonS.png" />
       </div>
     </div>
     <div id="headerFill" margin-top="30px">
