--- a/invitationals.html
+++ b/invitationals.html
@@ -3,6 +3,7 @@
     <script src="spaceduck.js"> </script>
     <TITLE>www.SpaceDucK.se</TITLE>
     <link rel="stylesheet" type="text/css" href="spaceduck.css">
+
   </HEAD>
   <BODY onload="pageLoad()">
     <div class="header">
@@ -23,9 +24,8 @@
     <div id="headerFill" margin-top="30px">
     </div>
     <H1>
-      In develpoment
+      In develpoment, currently poster only.
     </H1>
-    Most of this webpage is a learning experience, thus many tabs/subpages will
-    not be created or updated until a learning need arises.
+    <img style="border:0px" src="Images/latest_poster.png" />
   </BODY>
 </HTML>
