updating a template header file

--- a/header.html
+++ b/header.html
@@ -1,4 +1,4 @@
-<div class="headerTempl">
+<div class="header">
   <img src="Images/DucKLogoseethrough.png" width=80 height=80 align=left>
   <H1>
 www.SpaceDucK.se
