finalise template header file att:1

--- a/header.html
+++ b/header.html
@@ -1,17 +1,16 @@
 <div class="header">
-  <img src="Images/DucKLogoseethrough.png" width=80 height=80 align=left>
+  <a href="https://www.spaceduck.se/index.html"><img src="Images/DucKLogoseethrough.png" width=80 height=80 align=left></a>
   <H1>
 www.SpaceDucK.se
   </H1>
   <div class="menu">
-<img src="Images/buttonT.png" />
-<img src="Images/buttonTw.png" />
-<img src="Images/buttonY.png" />
-<img src="Images/buttonC.png" />
-<img src="Images/buttonG.png" />
-<img src="Images/buttonS.png" />
-<a href="invitationals.html"><img src="Images/buttonI.png" /></a>
-  </div>
+<img src="https://www.spaceduck.se/Images/buttonT.png" />
+<img src="https://www.spaceduck.se/Images/buttonTw.png" />
+<img src="https://www.spaceduck.se/Images/buttonY.png" />
+<img src="https://www.spaceduck.se/Images/buttonC.png" />
+<img src="https://www.spaceduck.se/Images/buttonG.png" />
+<img src="https://www.spaceduck.se/Images/buttonS.png" />
+<a href="https://www.spaceduck.se/invitationals/index.html"><img src="https://www.spaceduck.se/Images/buttonI.png" /></a>
 </div>
 <div id="headerFill" margin-top="30px">
 </div>
