--- a/header.html
+++ b/header.html
@@ -1,16 +1,17 @@
 <div class="header">
-  <a href="https://www.spaceduck.se/index.html"><img src="Images/DucKLogoseethrough.png" width=80 height=80 align=left></a>
+  <a href="https://www.spaceduck.se/index.html"><img src="https://www.spaceduck.se/Images/DucKLogoseethrough.png" width=80 height=80 align=left></a>
   <H1>
-www.SpaceDucK.se
+    www.SpaceDucK.se
   </H1>
   <div class="menu">
-<img src="https://www.spaceduck.se/Images/buttonT.png" />
-<img src="https://www.spaceduck.se/Images/buttonTw.png" />
-<img src="https://www.spaceduck.se/Images/buttonY.png" />
-<img src="https://www.spaceduck.se/Images/buttonC.png" />
-<img src="https://www.spaceduck.se/Images/buttonG.png" />
-<img src="https://www.spaceduck.se/Images/buttonS.png" />
-<a href="https://www.spaceduck.se/invitationals/index.html"><img src="https://www.spaceduck.se/Images/buttonI.png" /></a>
+    <img src="https://www.spaceduck.se/Images/buttonT.png" />
+    <img src="https://www.spaceduck.se/Images/buttonTw.png" />
+    <img src="https://www.spaceduck.se/Images/buttonY.png" />
+    <img src="https://www.spaceduck.se/Images/buttonC.png" />
+    <img src="https://www.spaceduck.se/Images/buttonG.png" />
+    <img src="https://www.spaceduck.se/Images/buttonS.png" />
+    <a href="https://www.spaceduck.se/invitationals/index.html"><img src="https://www.spaceduck.se/Images/buttonI.png" /></a>
+  </div>
 </div>
 <div id="headerFill" margin-top="30px">
 </div>
