header file and file structure attempt 1

--- a/invitationals/index.html
+++ b/invitationals/index.html
@@ -9,7 +9,7 @@
       crossorigin="anonymous">
     </script>
   </HEAD>
-  <BODY onload="setTimeout('pageLoad()',300)">
+  <BODY onload="setTimeout('pageLoad()',200)">
 
     <div id=header></div>
 
@@ -20,9 +20,8 @@
     </script>
 
     <H1>
-      In develpoment
+      In develpoment, currently poster only.
     </H1>
-    Most of this webpage is a learning experience, thus many tabs/subpages will
-    not be created or updated until a learning need arises.
+    <img style="border:0px" src="https://www.spaceduck.se/Images/latest_poster.png" />
   </BODY>
 </HTML>
