updated brackets page

--- a/invitationals/brackets.html
+++ b/invitationals/brackets.html
@@ -1,19 +1,15 @@
 <! doctype HTML>
-<html >
-  <head >
-    <link rel="stylesheet" type="text/css" href="spaceduck.css">
-    <link rel="stylesheet" type="text/css" href="jquery.bracket.min.css">
-
-    <script
+<HEAD>
+  <script src="https://www.spaceduck.se/spaceduck.js"> </script>
+  <TITLE>www.SpaceDucK.se</TITLE>
+  <link rel="stylesheet" type="text/css" href="https://www.spaceduck.se/spaceduck.css">
+  <script
     src="https://code.jquery.com/jquery-3.3.1.js"
     integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-    crossorigin="anonymous"></script>
-    <script src="spaceduck.js"> </script>
-
-  </head>
-
-
-  <body onload="setTimeout('pageLoad()',300)">
+    crossorigin="anonymous">
+  </script>
+</HEAD>
+<BODY onload="setTimeout('pageLoad()',200)">
 
     <div id=header></div>
     <script>
