updated brackets page and support

--- a/invitationals/brackets.html
+++ b/invitationals/brackets.html
@@ -3,6 +3,7 @@
   <script src="https://www.spaceduck.se/spaceduck.js"> </script>
   <TITLE>www.SpaceDucK.se</TITLE>
   <link rel="stylesheet" type="text/css" href="https://www.spaceduck.se/spaceduck.css">
+  <link rel="stylesheet" type="text/css" href="https://www.spaceduck.se/jquery.bracket.min.css">
   <script
     src="https://code.jquery.com/jquery-3.3.1.js"
     integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
@@ -23,7 +24,7 @@
     </H1>
 
 
-    <script type="text/javascript" src="jquery.bracket.min.js" ></script>
+    <script type="text/javascript" src="https://www.spaceduck.se/jquery.bracket.min.js" ></script>
 
     <script>
     var minimalData = {
