Tests withexpanded menurow

--- a/invitationals/index.html
+++ b/invitationals/index.html
@@ -1,6 +1,6 @@
 <HTML>
   <HEAD>
-    <script src="https://www.spaceduck.se/spaceduck.js"> </script>
+    <script src="https://www.spaceduck.se/spaceducktest.js"> </script>
     <TITLE>www.SpaceDucK.se</TITLE>
     <link rel="stylesheet" type="text/css" href="https://www.spaceduck.se/spaceduck.css">
     <script
