improving on js loading

--- a/invitationals/index.html
+++ b/invitationals/index.html
@@ -1,23 +1,21 @@
 <HTML>
   <HEAD>
-    <script src="https://www.spaceduck.se/spaceducktest.js"> </script>
-    <TITLE>www.SpaceDucK.se</TITLE>
-    <link rel="stylesheet" type="text/css" href="https://www.spaceduck.se/spaceduck.css">
     <script
       src="https://code.jquery.com/jquery-3.3.1.js"
       integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
       crossorigin="anonymous">
     </script>
+    <script src="https://www.spaceduck.se/spaceducktest.js"> </script>
+    <TITLE>www.SpaceDucK.se</TITLE>
+    <link rel="stylesheet" type="text/css" href="https://www.spaceduck.se/spaceduck.css">
   </HEAD>
   <BODY onload="setTimeout('pageLoad()',200)">
 
     <div id=header></div>
 
-    <script>
-    $(function(){
-      $("#header").load("https://www.spaceduck.se/header.html");
-    });
-    </script>
+    <!-- <script>
+
+    </script> -->
 
     <H1>
       In develpoment, currently poster only.
