--- a/invitationals/testindex.html
+++ b/invitationals/testindex.html
@@ -5,17 +5,16 @@
       integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
       crossorigin="anonymous">
     </script>
-    <script src="spaceducktest.js"> </script>
+    <script src="https://www.spaceduck.se/spaceducktest.js"> </script>
     <TITLE>www.SpaceDucK.se</TITLE>
     <link rel="stylesheet" type="text/css" href="https://www.spaceduck.se/spaceduck.css">
-    <script>
-      function toLoad(){
-        addToHeader("invitationals/menurow2.html");
-        pageLoad();
-      }
-    </script>
   </HEAD>
-
+  <script>
+    function toLoad(){
+      addToHeader("invitationals/menurow2.html");
+      pageLoad();
+    }
+  </script>
   <BODY onload="setTimeout('toLoad()',400)">
 
     <div id=header></div>
