--- a/invitationals/menurow2.html
+++ b/invitationals/menurow2.html
@@ -1,4 +1,4 @@
 <BR>
-  Contributors
-  schedule
-  brackets
+  <img src="https://www.spaceduck.se/Poster.png" />
+  <img src="https://www.spaceduck.se/Contributors.png" />
+  <img src="https://www.spaceduck.se/Schedule.png" />
