correcting button links

--- a/invitationals/menurow2.html
+++ b/invitationals/menurow2.html
@@ -1,4 +1,4 @@
 <BR>
-  <img src="https://www.spaceduck.se/Poster.png" />
-  <img src="https://www.spaceduck.se/Contributors.png" />
-  <img src="https://www.spaceduck.se/Schedule.png" />
+  <img src="https://www.spaceduck.se/invitationals/Images/Poster.png" />
+  <img src="https://www.spaceduck.se/invitationals/Images/Contributors.png" />
+  <img src="https://www.spaceduck.se/invitationals/Images/Schedule.png" />
