submenu buttons ready for use

--- a/invitationals/menurow2.html
+++ b/invitationals/menurow2.html
@@ -2,3 +2,4 @@
   <img src="https://www.spaceduck.se/invitationals/Images/Poster.png" />
   <img src="https://www.spaceduck.se/invitationals/Images/Contributors.png" />
   <img src="https://www.spaceduck.se/invitationals/Images/Schedule.png" />
+  <img src="https://www.spaceduck.se/invitationals/Images/Brackets.png" />
