--- a/invitationals/menurow2.html
+++ b/invitationals/menurow2.html
@@ -1,7 +1,7 @@
 <BR>
+<div>
   <img src="https://www.spaceduck.se/invitationals/Images/Poster.png" />
   <img src="https://www.spaceduck.se/invitationals/Images/Contributors.png" />
-  <img src="https://www.spaceduck.se/invitationals/Images/Contributors.png" />
-                                                          Contributors.png
   <img src="https://www.spaceduck.se/invitationals/Images/Schedule.png" />
   <img src="https://www.spaceduck.se/invitationals/Images/Brackets.png" />
+</div>
