--- a/invitationals/menurow2.html
+++ b/invitationals/menurow2.html
@@ -1,6 +1,6 @@
 <BR>
 <div>
-  <img src="https://www.spaceduck.se/invitationals/Images/Poster.png" />
+  <img src="https://www.spaceduck.se/invitationals/Images/Poster.png" onclick="changeContent('Test')"/>
   <img src="https://www.spaceduck.se/invitationals/Images/Contributors.png" />
   <img src="https://www.spaceduck.se/invitationals/Images/Schedule.png" />
   <img src="https://www.spaceduck.se/invitationals/Images/Brackets.png" />
