image onclick fix

--- a/invitationals/testindex.html
+++ b/invitationals/testindex.html
@@ -11,7 +11,7 @@
   </HEAD>
   <script>
     function toLoad(){
-      addToHeader("invitationals/menurow2.html");
+      setTimeout("addToHeader('invitationals/menurow2.html')", 200);
       setTimeout('pageLoad()',400);
     }
   </script>
