brackets subpage fix?

--- a/invitationals/testindex.html
+++ b/invitationals/testindex.html
@@ -8,6 +8,8 @@
     <script src="https://www.spaceduck.se/spaceducktest.js"> </script>
     <TITLE>www.SpaceDucK.se</TITLE>
     <link rel="stylesheet" type="text/css" href="https://www.spaceduck.se/spaceduck.css">
+    <link rel="stylesheet" type="text/css" href="https://www.spaceduck.se/jquery.bracket.min.css">
+    <script type="text/javascript" src="https://www.spaceduck.se/jquery.bracket.min.js" ></script>
   </HEAD>
   <script>
     function toLoad(){
