--- a/invitationals/menurow2.html
+++ b/invitationals/menurow2.html
@@ -3,5 +3,5 @@
   <img src="https://www.spaceduck.se/invitationals/Images/Poster.png" onclick="changeContent('invitationals/poster.html')"/>
   <img src="https://www.spaceduck.se/invitationals/Images/Contributors.png" />
   <img src="https://www.spaceduck.se/invitationals/Images/Schedule.png" />
-  <img src="https://www.spaceduck.se/invitationals/Images/Brackets.png" onclick="changeContent('invitationals/brackets_min.html')"/>
+  <img src="https://www.spaceduck.se/invitationals/Images/Brackets.png" onclick="startBracket()"/>
 </div>
