--- a/invitationals/testindex.html
+++ b/invitationals/testindex.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="https://www.spaceduck.se/spaceduck.css">
     <link rel="stylesheet" type="text/css" href="https://www.spaceduck.se/jquery.bracket.min.css">
     <script type="text/javascript" src="https://www.spaceduck.se/jquery.bracket.min.js" ></script>
+    <script type="text/javascript" src="https://www.spaceduck.se/invitationals/my_bracket.js"></script>
   </HEAD>
   <script>
     function toLoad(){
@@ -24,6 +25,8 @@
     <div id="content">
       <img style="border:0px" src="https://www.spaceduck.se/Images/latest_poster.png" />
     </div>
+
+    <div class=tournament ></div>
 
   </BODY>
 </HTML>
