trying to force a server update

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       In develpoment
     </H1>
     Most of this webpage is a learning experience, thus many tabs/subpages will
-    not be created or updated until a learning need arises.
+    not be created or updated until a learning need arises. Currently the invitationals
+    page is being created/expanded.
   </BODY>
 </HTML>
