--- a/index.html
+++ b/index.html
@@ -25,5 +25,7 @@
     Most of this webpage is a learning experience, thus many tabs/subpages will
     not be created or updated until a learning need arises. Currently the invitationals
     page is being created/expanded.
+
+    <!-- Force update -->
   </BODY>
 </HTML>
