mouseover clickable textimages final 1

--- a/header.html
+++ b/header.html
@@ -10,7 +10,7 @@
     <img src="https://www.spaceduck.se/Images/buttonC.png" />
     <img src="https://www.spaceduck.se/Images/buttonG.png" />
     <img src="https://www.spaceduck.se/Images/buttonS.png" />
-    <a href="https://www.spaceduck.se/invitationals/index.html"><img src="https://www.spaceduck.se/Images/buttonI.png" /></a>
+    <a href="https://www.spaceduck.se/invitationals/index.html"><img class="myImg" src="https://www.spaceduck.se/Images/buttonI.png" /></a>
   </div>
 </div>
 <div id="headerFill" margin-top="30px">
