--- a/invitationals/menurow2.html
+++ b/invitationals/menurow2.html
@@ -1,7 +1,7 @@
 <BR>
 <div>
   <img class="myImg" src="https://www.spaceduck.se/invitationals/Images/Poster.png" onclick="changeContent('invitationals/poster.html')"/>
-  <img src="https://www.spaceduck.se/invitationals/Images/Contributors.png" />
-  <img src="https://www.spaceduck.se/invitationals/Images/Schedule.png" />
-  <img id="myImg" src="https://www.spaceduck.se/invitationals/Images/Brackets.png" onclick="startBracket()"/>
+  <img class="myImg" src="https://www.spaceduck.se/invitationals/Images/Contributors.png" />
+  <img class="myImg" src="https://www.spaceduck.se/invitationals/Images/Schedule.png" />
+  <img class="myImg" src="https://www.spaceduck.se/invitationals/Images/Brackets.png" onclick="startBracket()"/>
 </div>
