mouseover clickable textimages final 2

--- a/invitationals/index.html
+++ b/invitationals/index.html
@@ -5,7 +5,7 @@
       integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
       crossorigin="anonymous">
     </script>
-    <script src="https://www.spaceduck.se/spaceducktest.js"> </script>
+    <script src="https://www.spaceduck.se/spaceduck.js"> </script>
     <TITLE>www.SpaceDucK.se</TITLE>
     <link rel="stylesheet" type="text/css" href="https://www.spaceduck.se/spaceduck.css">
   </HEAD>
