mouseover clickable textimages final 3

--- a/header.html
+++ b/header.html
@@ -1,5 +1,5 @@
 <div class="header">
-  <a href="https://www.spaceduck.se/index.html"><img src="https://www.spaceduck.se/Images/DucKLogoseethrough.png" width=80 height=80 align=left></a>
+  <a  class="myImg" href="https://www.spaceduck.se/index.html"><img src="https://www.spaceduck.se/Images/DucKLogoseethrough.png" width=80 height=80 align=left></a>
   <H1>
     www.SpaceDucK.se
   </H1>
