--- a/timer/index.html
+++ b/timer/index.html
@@ -3,9 +3,9 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-@font-face { font-family: JuneBug; src: url('sfmovieposter2.ttf'); }
+@font-face { font-family: Invitationals; src: url('sfmovieposter2.ttf'); }
 body{
-  font-family: JuneBug;
+  font-family: Invitationals;
 }
 p {
   text-align: center;
