missing style link added

--- a/invitationals/index.html
+++ b/invitationals/index.html
@@ -9,6 +9,7 @@
     <TITLE>www.SpaceDucK.se</TITLE>
     <link rel="stylesheet" type="text/css" href="https://www.spaceduck.se/spaceduck.css">
     <link rel="stylesheet" type="text/css" href="https://www.spaceduck.se/jquery.bracket.min.css">
+    <link rel="stylesheet" type="text/css" href="https://www.spaceduck.se/invitationals/style.css">
     <script type="text/javascript" src="https://www.spaceduck.se/jquery.bracket.min.js" ></script>
     <script type="text/javascript" src="https://www.spaceduck.se/invitationals/my_brackets.js"></script>
   </HEAD>
