included style link in document

--- a/invitationals/index.html
+++ b/invitationals/index.html
@@ -22,15 +22,17 @@
   <BODY onload="toLoad()">
 
     <div id=header></div>
+    <div class="invi">
 
-    <div id="content">
-      <img style="border:0px" src="https://www.spaceduck.se/Images/latest_poster.png" />
-    </div>
+      <div id="content">
+        <img style="border:0px" src="https://www.spaceduck.se/Images/latest_poster.png" />
+      </div>
 
-    <div class=tournament ></div>
+      <div class=tournament ></div>
 
-    <div id="debug"></div>
+      <div id="debug"></div>
 
+      </div>
     </div>
 
   </BODY>
