Updating contributors page

--- a/invitationals/contributors.html
+++ b/invitationals/contributors.html
@@ -2,35 +2,55 @@
   All the people and organisations that made this tournament possible.
 </h1>
 
-<br>
 <h2>
 Myself, SpaceDucK.
 </h2>
+<img src="Images/SpaceDucKSQ.png" alt="SpaceDucK" width="200" height="200">
+<br>This was my project so naturally I'm partially responsible.
 <br>
-This was my project so naturally I'm partially responsible.
-
 <h2>
   Casters
 </h2>
-<br>
 <h3>
   Kaitlyn
 </h3>
-Not just casting the matches but also contributing with experience and decisionmaking.
-
+<img src="Images/KaitlynSQ.png" alt="SpaceDucK" width="200" height="200">
+<br>Not just casting the matches but also contributing with experience and decisionmaking.
+<br><a href="https://www.twitch.tv/kaitlyn/">Twitch</a>
+<br><a href="https://twitter.com/kaitly_n/">Twitter</a>
+<br><a href="https://www.instagram.com/kaitlyn_tv/">Instagram</a>
+<br>
 <h2>
   Contestants
 </h2>
-<br>
 <h3>Angeline Tammi</h3>
-<br>
+<img src="Images/AngelineSQ.png" alt="SpaceDucK" width="200" height="200">
+<br> Australian D2 Protoss
+<br><a href="https://www.twitch.tv/angelinetammi/">Twitch</a>
+<br><a href="https://twitter.com/angelinetammi/">Twitter</a>
+<br><a href="https://www.instagram.com/angelinetammi/">Instagram</a>
+
 <h3>Chibi_ichig0</h3>
-<br>
+<img src="Images/ChibiSQ.png" alt="SpaceDucK" width="200" height="200">
+<br>Chibi_ichig0 means tiny strawberry. She is a D3 Terran from California and was instrumental in the
+creation of this tournament as both the first player to sign up, helping out with recruiting some of
+the other players and the idea for the tournament.
+<br><a href="https://www.twitch.tv/chibi_ichig0/">Twitch</a>
+<br><a href="https://twitter.com/Chibi_ichig0/">Twitter</a>
+<br><a href="https://www.instagram.com/chibi_ichig0/">Instagram</a>
+
 <h3>moistchipxx</h3>
-<br>
+<img src="Images/IreneSQ.png" alt="SpaceDucK" width="200" height="200">
+<br> American D2 Protoss playing out of the Netherlands.
+<br><a href="https://www.twitch.tv/moistchipxx/">Twitch</a>
+<br><a href="https://twitter.com/Irene_Byun_/">Twitter</a>
+<br><a href="https://www.instagram.com/irene_byun_/">Instagram</a>
+
 <h3>Lee Fun</h3>
-<br>
+<img src="Images/LeeSQ.png" alt="SpaceDucK" width="200" height="200">
+<br> US P1 Zerg.
+<br><a href="https://www.twitch.tv/leefunnn/">Twitch</a>
 <h2>Friends and promotors</h2>
-<br><h3>Livibee</h3>
-<br><h3>Atira</h3>
-<br><h3>Qruxel</h3>
+<h3>Livibee</h3>
+<h3>Atira</h3>
+<h3>Qruxel</h3>
