added starting time to schedule

--- a/invitationals/schedule.html
+++ b/invitationals/schedule.html
@@ -3,6 +3,14 @@
   schedule to catch up after the first hour.
 </h1>
 <br>
+<h2>
+  The tournament is on April 18th.
+</h2>
+The tournament starts at:
+<br>8 AM PST
+<br>11 AM EDT
+<br>5 PM CEST
+<br>11 PM AWST
 <table>
   <tr>
     <th>Time from stream start:</th>
